--- a/courses/spanish.html
+++ b/courses/spanish.html
@@ -29,7 +29,10 @@
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#newsMenu" aria-controls="newsMenu" aria-expanded="false" aria-lable="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="ui dropdown">
+    <div class="collapse navbar-collapse justify-content-end" id="newsMenu">
+      <div class="navbar-nav">
+        <a class="nav-item nav-link nav-pills" href="../index.html">Home</a>
+        <div class="ui dropdown">
           <a class="nav-item nav-link nav-pills dropdown-toggle" href="#">Browse our courses</a>
           <div class="menu">
             <div class="item">
@@ -80,8 +83,8 @@
             Join Us
           </a>
           <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-          <a class="dropdown-item" href="#" id="login">Login</a>
-          <a class="dropdown-item" href="#" id="signup">Sign Up</a>
+            <a class="dropdown-item" href="#" id="login">Login</a>
+            <a class="dropdown-item" href="#" id="signup">Sign Up</a>
           </div>
         </div>
         <a class="nav-item nav-link nav-pills" href="#">Contact</a>
