--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
             <div class="item">
               Foreign Languages
               <div class="menu">
-                <div class="item"><a class="courses" href="/courses/french.html">French</a></div>
-                <div class="item"><a class="courses" href="/courses/spanish.html">Spanish</a></div>
-                <div class="item"><a class="courses" href="/courses/german.html">German</a></div>
+                <div class="item"><a class="courses" href="courses/french.html">French</a></div>
+                <div class="item"><a class="courses" href="courses/spanish.html">Spanish</a></div>
+                <div class="item"><a class="courses" href="courses/german.html">German</a></div>
               </div>
             </div>
            
