--- a/index.html
+++ b/index.html
@@ -47,32 +47,32 @@
             <div class="item">
               Development
               <div class="menu">
-                <div class="item"><a class="courses" href="/courses/web.html">Web Development</a></div>
-                <div class="item"><a class="courses" href="/courses/app.html">App Development</a></div>
-                <div class="item"><a class="courses" href="/courses/ios.html">iOS Development</a></div>
-                <div class="item"><a class="courses" href="/courses/game.html">Game Development</a></div>
+                <div class="item"><a class="courses" href="courses/web.html">Web Development</a></div>
+                <div class="item"><a class="courses" href="courses/app.html">App Development</a></div>
+                <div class="item"><a class="courses" href="courses/ios.html">iOS Development</a></div>
+                <div class="item"><a class="courses" href="courses/game.html">Game Development</a></div>
               </div>
             </div>
             <div class="item">
               Internet of Robotic Things
               <div class="menu">
-                <div class="item"><a class="courses" href="/courses/iot.html">Internet of Things [IoT]</a></div>
-                <div class="item"><a class="courses" href="/courses/robotics.html">Robotics</a></div>
-                <div class="item"><a class="courses" href="/courses/drone.html">Drone Making</a></div>
+                <div class="item"><a class="courses" href="courses/iot.html">Internet of Things [IoT]</a></div>
+                <div class="item"><a class="courses" href="courses/robotics.html">Robotics</a></div>
+                <div class="item"><a class="courses" href="courses/drone.html">Drone Making</a></div>
               </div>
             </div>
             <div class="item">
               Marketing
               <div class="menu">
-                <div class="item"><a class="courses" href="/courses/dm.html">Digital Marketing</a></div>
+                <div class="item"><a class="courses" href="courses/dm.html">Digital Marketing</a></div>
               </div>
             </div>
             <div class="item">
               Coding
               <div class="menu">
-                <div class="item"><a class="courses" href="/courses/c++.html">C++</a></div>
-                <div class="item"><a class="courses" href="/courses/java.html">Java</a></div>
-                <div class="item"><a class="courses" href="/courses/python.html">Python</a></div>
+                <div class="item"><a class="courses" href="courses/c++.html">C++</a></div>
+                <div class="item"><a class="courses" href="courses/java.html">Java</a></div>
+                <div class="item"><a class="courses" href="courses/python.html">Python</a></div>
               </div>
             </div>
           </div>
