Fixed touch Glitch

--- a/courses/game.html
+++ b/courses/game.html
@@ -39,40 +39,40 @@
               Foreign Languages
               <div class="menu">
                 <div class="item"><a class="courses" href="french.html">French</a></div>
-                <div class="item"><a class="courses" href="spanish.html">Spanish</a></div>
-                <div class="item"><a class="courses" href="german.html">German</a></div>
+                <a class="courses item" href="spanish.html">Spanish</a>
+                <a class="courses item" href="german.html">German</a>
               </div>
             </div>
            
             <div class="item">
               Development
               <div class="menu">
-                <div class="item"><a class="courses" href="web.html">Web Development</a></div>
-                <div class="item"><a class="courses" href="app.html">App Development</a></div>
-                <div class="item"><a class="courses" href="ios.html">iOS Development</a></div>
+                <a class="courses item" href="web.html">Web Development</a>
+                <a class="courses item" href="app.html">App Development</a>
+                <a class="courses item" href="ios.html">iOS Development</a>
                 <div class="item"><a class="courses" href="#">Game Development</a></div>
               </div>
             </div>
             <div class="item">
               Internet of Robotic Things
               <div class="menu">
-                <div class="item"><a class="courses" href="iot.html">Internet of Things [IoT]</a></div>
-                <div class="item"><a class="courses" href="robotics.html">Robotics</a></div>
-                <div class="item"><a class="courses" href="drone.html">Drone Making</a></div>
+                <a class="courses item" href="iot.html">Internet of Things [IoT]</a>
+                <a class="courses item" href="robotics.html">Robotics</a>
+                <a class="courses item" href="drone.html">Drone Making</a>
               </div>
             </div>
             <div class="item">
               Marketing
               <div class="menu">
-                <div class="item"><a class="courses" href="dm.html">Digital Marketing</a></div>
+                <a class="courses item" href="dm.html">Digital Marketing</a>
               </div>
             </div>
             <div class="item">
               Coding
               <div class="menu">
-                <div class="item"><a class="courses" href="c++.html">C++</a></div>
-                <div class="item"><a class="courses" href="java.html">Java</a></div>
-                <div class="item"><a class="courses" href="python.html">Python</a></div>
+                <a class="item courses" href="c++.html">C++</a>
+                <a class="item courses" href="java.html">Java</a>
+                <a class="courses item" href="python.html">Python</a>
               </div>
             </div>
           </div>
