--- a/index.html
+++ b/index.html
@@ -38,45 +38,46 @@
             <div class="item">
               Foreign Languages
               <div class="menu">
-                <div class="item"><a class="courses" href="courses/french.html">French</a></div>
-                <div class="item"><a class="courses" href="courses/spanish.html">Spanish</a></div>
-                <div class="item"><a class="courses" href="courses/german.html">German</a></div>
+                <a class="courses item" href="courses/french.html">French</a>
+                <a class="courses item" href="courses/spanish.html">Spanish</a>
+                <a class="courses item" href="courses/german.html">German</a>
               </div>
             </div>
            
             <div class="item">
               Development
               <div class="menu">
-                <div class="item"><a class="courses" href="courses/web.html">Web Development</a></div>
-                <div class="item"><a class="courses" href="courses/app.html">App Development</a></div>
-                <div class="item"><a class="courses" href="courses/ios.html">iOS Development</a></div>
-                <div class="item"><a class="courses" href="courses/game.html">Game Development</a></div>
+                <a class="courses item" href="courses/web.html">Web Development</a>
+                <a class="courses item" href="courses/app.html">App Development</a>
+                <a class="courses item" href="courses/ios.html">iOS Development</a>
+                <a class="courses item" href="courses/game.html">Game Development</a>
               </div>
             </div>
             <div class="item">
               Internet of Robotic Things
               <div class="menu">
-                <div class="item"><a class="courses" href="courses/iot.html">Internet of Things [IoT]</a></div>
-                <div class="item"><a class="courses" href="courses/robotics.html">Robotics</a></div>
-                <div class="item"><a class="courses" href="courses/drone.html">Drone Making</a></div>
+                <a class="courses item" href="courses/iot.html">Internet of Things [IoT]</a>
+                <a class="courses item" href="courses/robotics.html">Robotics</a>
+                <a class="courses item" href="courses/drone.html">Drone Making</a>
               </div>
             </div>
             <div class="item">
               Marketing
               <div class="menu">
-                <div class="item"><a class="courses" href="courses/dm.html">Digital Marketing</a></div>
+                <a class="courses item" href="courses/dm.html">Digital Marketing</a>
               </div>
             </div>
             <div class="item">
               Coding
               <div class="menu">
-                <div class="item"><a class="courses" href="courses/c++.html">C++</a></div>
-                <div class="item"><a class="courses" href="courses/java.html">Java</a></div>
-                <div class="item"><a class="courses" href="courses/python.html">Python</a></div>
+                <a class="item courses" href="courses/c++.html">C++</a>
+                <a class="item courses" href="courses/java.html">Java</a>
+                <a class="courses item" href="courses/python.html">Python</a>
               </div>
             </div>
           </div>
         </div>
+
 
         <div class="dropdown">
           <a class="nav-link nav-item dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -87,7 +88,8 @@
           <a class="dropdown-item" href="#" id="signup">Sign Up</a>
           </div>
         </div>
-        <a class="nav-item nav-link nav-pills" href="#">About</a>
+        <a class="nav-item nav-link nav-pills" href="#">About Us</a>
+        <a class="nav-item nav-link nav-pills" href="#">Contact Us</a>
       </div>
     </div>
   </nav>
