--- a/courses/drone.html
+++ b/courses/drone.html
@@ -218,10 +218,10 @@
   <div class="bottom-container">
     <div class="container">
       <div class="row">
-        <div class="col-2">
+        <div class="col-sm-2 col-4">
           <h5>Links</h5>
         </div>
-        <div class="col-4">
+        <div class="col-sm-4 col-8">
           <h5>Contact Us</h5>
           <ul class="list-unstyled">
             <li>
@@ -239,9 +239,9 @@
             </li>
           </ul>
         </div>
-        <div class="col-6">
+        <div class="col-sm-6 col-12">
           <h5>Our Social Links</h5>
-          <div class="social text-left">
+          <div class="social">
             <a class="footer-link" href="https://www.facebook.com/learnyuva/"><i class=" fa-fw fab fa-facebook fa-lg"></i></a>
             <a class="footer-link" href="https://www.linkedin.com/"><i class="fa-fw fab fa-linkedin-in fa-lg"></i></a>
             <a class="footer-link" href="https://www.instagram.com/learnyuva/"><i class="fa-fw fab fa-instagram fa-lg"></i></a>
@@ -251,6 +251,7 @@
       <div class="row">
         <div class="col-12 text-center">
           <h5 class="text-center">© 2020 LearnYuva All rights reserved.</h5>
+          <h6 class="Love">Made with &#x2764;</h6>
         </div>
       </div>
     </div>
