--- a/courses/drone.html
+++ b/courses/drone.html
@@ -240,7 +240,7 @@
           </ul>
         </div>
         <div class="col-sm-6 col-12">
-          <h5>Our Social Links</h5>
+          <h5>Our Social Media Handles</h5>
           <div class="social">
             <a class="footer-link" href="https://www.facebook.com/learnyuva/"><i class=" fa-fw fab fa-facebook fa-lg"></i></a>
             <a class="footer-link" href="https://www.linkedin.com/"><i class="fa-fw fab fa-linkedin-in fa-lg"></i></a>
